--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,37 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Directorios
+__pycache__/
+venv/
+env/
+build/
+dist/
+*.egg-info/
+.pytest_cache/
+
+# Archivos
+*.pyc
+*.pyo
+*.pyd
+*.log
+*.swp
+.env
+.python-version
+.ipynb_checkpoints/
+
+# Configuraciones
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# Archivos de salida de compilación
+*.o
+*.out
+*.so
+
+# Otros
+.DS_Store
+Thumbs.db
